@@ -295,6 +295,13 @@ name|TextField
 extends|extends
 name|FieldType
 block|{
+DECL|field|autoGeneratePhraseQueries
+specifier|protected
+name|boolean
+name|autoGeneratePhraseQueries
+init|=
+literal|true
+decl_stmt|;
 DECL|method|init
 specifier|protected
 name|void
@@ -330,6 +337,31 @@ operator|&=
 operator|~
 name|OMIT_TF_POSITIONS
 expr_stmt|;
+name|String
+name|autoGeneratePhraseQueriesStr
+init|=
+name|args
+operator|.
+name|remove
+argument_list|(
+literal|"autoGeneratePhraseQueries"
+argument_list|)
+decl_stmt|;
+if|if
+condition|(
+name|autoGeneratePhraseQueriesStr
+operator|!=
+literal|null
+condition|)
+name|autoGeneratePhraseQueries
+operator|=
+name|Boolean
+operator|.
+name|parseBoolean
+argument_list|(
+name|autoGeneratePhraseQueriesStr
+argument_list|)
+expr_stmt|;
 name|super
 operator|.
 name|init
@@ -339,6 +371,16 @@ argument_list|,
 name|args
 argument_list|)
 expr_stmt|;
+block|}
+DECL|method|getAutoGeneratePhraseQueries
+specifier|public
+name|boolean
+name|getAutoGeneratePhraseQueries
+parameter_list|()
+block|{
+return|return
+name|autoGeneratePhraseQueries
+return|;
 block|}
 DECL|method|getSortField
 specifier|public
