@@ -713,36 +713,64 @@ argument_list|()
 return|;
 block|}
 block|}
-comment|//Intercept poly fields, as they get expanded by default to an OR clause of
 name|SchemaField
 name|sf
 init|=
 name|schema
 operator|.
-name|getField
+name|getFieldOrNull
 argument_list|(
 name|field
 argument_list|)
 decl_stmt|;
-comment|//TODO: is there anyway to avoid this instance of check?
 if|if
 condition|(
 name|sf
 operator|!=
 literal|null
-operator|&&
-operator|!
-operator|(
+condition|)
+block|{
+name|FieldType
+name|ft
+init|=
 name|sf
 operator|.
 name|getType
 argument_list|()
+decl_stmt|;
+comment|// delegate to type for everything except TextField
+if|if
+condition|(
+name|ft
 operator|instanceof
 name|TextField
-operator|)
 condition|)
 block|{
-comment|//we have a poly field, deal with it specially by delegating to the FieldType
+return|return
+name|super
+operator|.
+name|getFieldQuery
+argument_list|(
+name|field
+argument_list|,
+name|queryText
+argument_list|,
+name|quoted
+operator|||
+operator|(
+operator|(
+name|TextField
+operator|)
+name|ft
+operator|)
+operator|.
+name|getAutoGeneratePhraseQueries
+argument_list|()
+argument_list|)
+return|;
+block|}
+else|else
+block|{
 return|return
 name|sf
 operator|.
@@ -758,6 +786,7 @@ argument_list|,
 name|queryText
 argument_list|)
 return|;
+block|}
 block|}
 comment|// default to a normal field query
 return|return
